--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ body {
           <h1>Programming Docs</h1>
           
           <p class="lead">These lessons will help you learn a little more about HTML, CSS, and/or Javascript</p>
-          <a class="btn btn-lg btn-primary" href="/docs/5.2/components/navbar/" role="button">Continue to <i>Lesson 1 - What is Programming?</i></a>
+          <a class="btn btn-lg btn-primary" href="https://docs.tlochsta.tk/lessons/1" role="button">Continue to <i>Lesson 1 - What is Programming?</i></a>
         </div>
       </main>
 </body>
